# youtube-automation

./: .gitignore  docker-compose.yml
downloader/: Dockerfile  README.md  pyproject.toml
downloader/src/downloader/: main.py  storage.py  youtube.py
transcriber/: Dockerfile  pyproject.toml
transcriber/src/transcriber/: chunker.py  main.py  models.py  transcribe.py  utils.py
vectordb/: Dockerfile  README.md  pyproject.toml
vectordb/data/: chroma.sqlite3
vectordb/src/vectordb/: embeddings.py  main.py  models.py  storage.py  store.py
