[tool.poetry]
name = "youtube-vectordb"
version = "0.1.0"
description = "Service to create and manage vector embeddings for YouTube transcripts"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "vectordb", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
chromadb = "^0.4.18"
pydantic = "^2.0"
python-dotenv = "^1.0.0"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
httpx = "^0.25.0"
sentence-transformers = "^2.2.2"
google-cloud-storage = "^2.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"