[project]
name = "vectordb"
version = "0.1.0"
description = ""
authors = [{ name = "Aayush Chaudhary", email = "acaayush1111@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "langchain (>=0.3.24,<0.4.0)",
    "langchain-google-vertexai (>=2.0.21,<3.0.0)",
    "langchain-text-splitters (>=0.3.8,<0.4.0)",
    "langchain-community (>=0.3.23,<0.4.0)",
    "langchain-chroma (>=0.2.3,<0.3.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
